--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <html>
   <head>
-    <title>Video Streaming Demonstration</title>
+    <title>Video Stream</title>
+    <style>
+      body {
+        background-color: #1B262C;
+      }
+      h1 {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        align-items: center;
+        font-size: 4em;
+        color: #316B83;
+      }
+      .center{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        align-items: center;
+      }
+    </style>
+    <script>
+    window.onload = function() {
+      var url = window.location.href;
+      document.getElementById('video-feed').src = url+"/video-feed/";
+    };
+    </script>
   </head>
   <body>
-    <h1>Video Streaming Demonstration</h1>  
-    <img src="http://localhost:5000/video-feed/">
+    <h1>Video Stream</h1>
+    <div class="center">
+      <img id="video-feed" src="">
+    </div>
   </body>
 </html>
